[package]
name = "healpix"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["algorithms", "science"]
repository = "https://github.com/matt-cornell/healpix-rs/"
description = """
Rust implementation of the HEALPix tesselation.
"""
exclude = [
  "makeDoc.bash",
  "resources/4doc",
]

[dependencies]
arrayvec = "0.7.6"
either = "1.15.0"
triomphe = { version = "0.1.14", default-features = false }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]